2010-04-09  Zhenyao Mo  <zmo@google.com>

Reviewed by Darin Fisher.

        Passing null WebGLObjects should synthesize INVALID_VALUE error
        https://bugs.webkit.org/show_bug.cgi?id=37047

        * fast/canvas/webgl/error-reporting-expected.txt: Change a few errors from INVALID_OPERATION to INVALID_VALUE.
        * fast/canvas/webgl/getActiveTest-expected.txt: Ditto.
        * fast/canvas/webgl/null-object-behaviour-expected.txt: Ditto.
        * fast/canvas/webgl/script-tests/error-reporting.js: Ditto.
2010-04-09  Zhenyao Mo  <zmo@google.com>

        Reviewed by Darin Fisher.

        Passing null WebGLObjects should synthesize INVALID_VALUE error
        https://bugs.webkit.org/show_bug.cgi?id=37047

        * html/canvas/WebGLRenderingContext.cpp: Synthesize INVALID_VALUE error when input object is 0.
        (WebCore::WebGLRenderingContext::bindAttribLocation):
        (WebCore::WebGLRenderingContext::compileShader):
        (WebCore::WebGLRenderingContext::detachShader):
        (WebCore::WebGLRenderingContext::validateWebGLObject):
        (WebCore::WebGLRenderingContext::getActiveAttrib):
        (WebCore::WebGLRenderingContext::getActiveUniform):
        (WebCore::WebGLRenderingContext::getProgramParameter):
        (WebCore::WebGLRenderingContext::getProgramInfoLog):
        (WebCore::WebGLRenderingContext::getShaderParameter):
        (WebCore::WebGLRenderingContext::getShaderInfoLog):
        (WebCore::WebGLRenderingContext::getShaderSource):
        (WebCore::WebGLRenderingContext::getUniform):
        (WebCore::WebGLRenderingContext::getUniformLocation):
        (WebCore::WebGLRenderingContext::linkProgram):
        (WebCore::WebGLRenderingContext::shaderSource):
        * html/canvas/WebGLRenderingContext.h: Add helper function to validate webgl object input parameters.

Canonical link: https://commits.webkit.org/48616@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57324 268f45cc-cd09-0410-ab3c-d52691b4dbfc